--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,10 @@ android {
     buildFeatures {
         compose true
     }
+    buildFeatures {
+        viewBinding true
+    }
+
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
     }
@@ -62,6 +66,7 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     kapt 'androidx.lifecycle:lifecycle-compiler:2.4.0'
+
 
     // Room Persistence Library
     implementation "androidx.room:room-runtime:$room_version"
@@ -96,7 +101,8 @@ dependencies {
     // Integration with ViewModels
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0'
     // Navigation
-    implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     // Accompanist
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.20.0"
     // Constraint Layout Compose
