--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        nav_version = "2.3.5"
+        nav_version = "2.4.0-beta02"
         room_version = "2.3.0"
         hilt_version = "2.38.1"
         compose_version = "1.0.4"
